tests/snapshots/edge_case_primitives.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
info:
  use_form_encoding: false
snapshot_kind: text
---
empty_string=&
zero_int=0&
zero_float=0.0&
false_bool=false&
space_string=+++&
special_chars=!@%23$%^%26*()_%2B-%3D%5B%5D{}|;':,.%3C%3E?/~`
