tests/snapshots/externally_tagged_enum-3.snap
---
source: tests/test_roundtrip.rs
expression: serialized
info:
  use_form_encoding: false
snapshot_kind: text
---
Newtype=hello
