tests/snapshots/externally_tagged_enum-4.snap
---
source: tests/test_roundtrip.rs
expression: serialized
info:
  use_form_encoding: true
snapshot_kind: text
---
Newtype=hello
