tests/snapshots/externally_tagged_enum-6.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
info:
  use_form_encoding: true
snapshot_kind: text
---
Tuple[0]=1&
Tuple[1]=2
